--- a/employee-dashboard/src/App.css
+++ b/employee-dashboard/src/App.css
@@ -8,17 +8,58 @@
 @media only screen and(min-width: 768px) and (max-width: 1023px){
 }
 
-/* for desktop view */
+/* -- for desktop view -- */
+.root {
+    flex: 1 1;
+    display: flex;
+    height: 100vh;
+}
+/* slider */
+.slider{
+    display: flex;
+}
+
+.sliderImg{
+    margin-top: 100px;
+    display: grid;
+    justify-content: center;
+
+}
+.sliderNav{
+    margin-top: 50px;
+}
+
+.ant-layout-sider {
+    position: relative;
+    min-width: 0;
+    background: lightgrey;
+    transition: all 0.2s;
+}
+.ant-menu {
+    background: lightgray;
+    justify-content: center;
+    display: grid;
+}
+/* content styling */
+.content {
+    flex: 1 1;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-top: 25px;
+}
+
+
 #components-layout-demo-responsive {
     height: 32px;
     margin: 16px;
     /* background: rgba(255, 255, 255, 0.2); */
     background:lightblue;
-    }
+}
+
+
 
 .site-layout-sub-header-background {
     background: #fff;
-    color: yellow
 }
 
 .site-layout-background {
