--- a/employee-dashboard/src/css/styles.css
+++ b/employee-dashboard/src/css/styles.css
@@ -1,11 +1,30 @@
 @import '~antd/dist/antd.css';
-/* for mobile view */
-/* for tablet view */
 /* -- for desktop view -- */
 .root {
   flex: 1 1;
   display: flex;
   height: 100vh;
+}
+/* modal */
+.modalDiv {
+  display: flex;
+}
+h5.ant-typography.modalTitle {
+  text-align: center;
+  flex: 1;
+}
+.ant-divider-horizontal {
+  margin: 0;
+}
+.modalContent {
+  padding-top: 30px;
+  padding-bottom: 20px;
+}
+h3.ant-typography,
+div.ant-typography-h3,
+div.ant-typography-h3 > textarea,
+.ant-typography h3 {
+  margin-bottom: 1em;
 }
 /* slider */
 .slider {
@@ -66,4 +85,10 @@
 }
 .site-layout-background {
   background: #fff;
+}
+.table-row-light {
+  background-color: lightgrey;
+}
+.table-row-none {
+  background-color: white;
 }
