--- a/employee-dashboard/src/less/styles.less
+++ b/employee-dashboard/src/less/styles.less
@@ -1,18 +1,38 @@
 @import '~antd/dist/antd.css';
 
-/* for mobile view */
-@media only screen and (max-width: 768px) {
-}
+// /* for mobile view */
+// @media only screen and (max-width: 768px) {
+// }
 
-/* for tablet view */
-@media only screen and(min-width: 768px) and (max-width: 1023px){
-}
+// /* for tablet view */
+// @media only screen and(min-width: 768px) and (max-width: 1023px){
+// }
 
 /* -- for desktop view -- */
 .root {
     flex: 1 1;
     display: flex;
     height: 100vh;
+}
+/* modal */
+.modalDiv{
+    display:flex;
+}
+h5.ant-typography.modalTitle {
+    text-align: center;
+    flex: 1;
+}
+.ant-divider-horizontal {
+    margin: 0;
+}
+
+.modalContent {
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
+h3.ant-typography, div.ant-typography-h3, div.ant-typography-h3 > textarea, .ant-typography h3 {
+    margin-bottom: 1em
 }
 /* slider */
 .slider{
@@ -78,7 +98,12 @@
 .site-layout-background {
     background: #fff;
 }
-
+.table-row-light {
+    background-color: lightgrey;
+}
+.table-row-none {
+    background-color: white;
+}
 
 
 
